# qa_guru_lesson_16

./: .gitignore  README.md  pyproject.toml
data/: books.py  users.py
model/pages/: basket_page.py  book_page.py  main_page.py  profile_page.py  search_page.py
tests/: conftest.py  test_adding_book_to_basket.py  test_authorization.py  test_book_search.py  test_logout.py  test_removing_book_from_basket.py
utils/: attach.py  tools.py
