[project]
name = "qa-guru-lesson-16"
version = "1.0.0"
description = "Project with poetry"
authors = [
    {name = "Ilia Shebanov"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pytest",
    "selene==2.0.0rc9",
    "allure-pytest",
    "python-dotenv"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"

