[project]
name = "qa-guru-lesson-16"
version = "1.0.0"
description = "Project with poetry"
authors = [
    {name = "Ilia Shebanov"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

[tool.poetry.dependencies]
pytest = "^8.3.5"
selene = "==2.0.0rc9"
allure-pytest = ">=2.13.5"
python-dotenv = ">=1.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



